--- a/src/pages/nicolas/components/PostForm.css
+++ b/src/pages/nicolas/components/PostForm.css
@@ -1,5 +1,8 @@
+.space{
+  margin-bottom: 10%;
+}
 .card:hover {
-    box-shadow: 5px 10px 20px 1px rgba(255, 255, 255, 0.273) !important;
+    box-shadow: 5px 10px 20px 1px #431294!important;
     transition: all 0.7s linear;
   }
   
